tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/unshadowable-enum-variant.wyst
module demo
enum State { widen }
